[gd_scene load_steps=6 format=2]

[ext_resource path="res://nodes/player/Player.gd" type="Script" id=1]
[ext_resource path="res://nodes/player/Trail.gd" type="Script" id=2]
[ext_resource path="res://nodes/player/Knife.gd" type="Script" id=3]
[ext_resource path="res://nodes/player/Knife.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 19.7672, 5.03619 )

[node name="Player" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]
swipe_color = Color( 1, 0, 0, 1 )

[node name="Trail" type="Node2D" parent="." index="0"]

script = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]
color = Color( 1, 0, 0, 1 )

[node name="DimTween" type="Tween" parent="Trail" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Knife" type="Area2D" parent="." index="1" groups=[
"player",
]]

position = Vector2( 350, 350 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Knife" index="0"]

scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Knife" index="1"]

position = Vector2( 7.88371, -0.291988 )
shape = SubResource( 1 )

[node name="SwipeTween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="RotationTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="tween_completed" from="Trail/DimTween" to="Trail" method="_on_DimTween_tween_completed"]

[connection signal="body_entered" from="Knife" to="." method="_on_Knife_body_entered"]

[connection signal="tween_completed" from="SwipeTween" to="." method="_on_SwipeTween_tween_completed"]


